crates/uitest/fixtures/ty_check/msg_duplicate_selector.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/msg_duplicate_selector.fe
---
error[9-0004]: duplicate selector in msg block
  ┌─ msg_duplicate_selector.fe:8:5
  │
4 │     #[selector = 0x01]
  │     ------------------ `Transfer` with selector 0x00000001 declared here
  ·
8 │     #[selector = 0x01]
  │     ^^^^^^^^^^^^^^^^^^ `Approve` has selector 0x00000001 which conflicts with `Transfer`
  │
  = each variant in a msg block must have a unique selector
